# esp32-smart-waste-segregator

./: .gitignore  README.md
frontend/: app.js  index.html  styles.css
hw_code/: hw_code.ino
ml_backend/: README.md  pyproject.toml
ml_backend/configs/: settings.json
ml_backend/models/: keras_model.h5
ml_backend/server/: app.py
