[project]
name = "smart-dustbin-ml-backend"
version = "0.1.0"
description = "ML backend for the ESD smart dustbin project."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "flask>=3.1,<4",
    "numpy>=1.26,<2",
    "pillow>=11,<13",
    "tensorflow>=2.15,<2.16",
]

[tool.uv]
package = false
